another change is made to index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
 <h7>This is a new heading </h7>
+<h8>This is a new heading </h8>
 </body>
 </html>
