Added extra header to index.html , made some small changes to the code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <h4>This is heading 4</h4>
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
-<h7>This is a new heading </h7>
-<h8>This is a new heading </h8>
+<h7>This is a new heading h7 </h7>
+<h8>This is a new heading h8</h8>
+<h9>This is a new heading h9 </h9>
 </body>
 </html>
