Added 10th header to the file

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <h7>This is a new heading h7 </h7>
 <h8>This is a new heading h8</h8>
 <h9>This is a new heading h9 </h9>
+<h10>This is a new heading h9 </h10>
 </body>
 </html>
